cupt (2.0.2~) UNRELEASED; urgency=low

  * lib:
    - download/methodfactory:
      - Don't try to unload a module twice if it was loaded successfully but
        no needed symbols were found.
    - download/uri:
      - Correctly handle URIs with tree slashes, such as 'file:///...'.
  * doc:
    - reference:
      - 'File::getBlock': documented an output value of the 'size' parameter.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Wed, 27 Apr 2011 11:26:22 +0300

cupt (2.0.1) unstable; urgency=low

  * lib:
    - download/manager:
      - Give a warning instead of an error on the systems where the socket
        option SO_RCVTIMEO is not supported. Thanks to Jonathan Nieder for
        the analysis.
    - [Jonathan Nieder] Don't check for WIFCONTINUED. (Closes: #623159)
  * debian:
    - control:
      - Fixed typo 'arternative' in some short descriptions.
  * doc:
    - reference:
      - Hide 'CUPT_API' macro in declarations.
      - Hide 'CUPT_*' macro definitions.
    - tutorial:
      - Documented repository cache layout incompatibility with recent
        versions of APT.
      - Documented a tuning of resolver's maximum solution count.
      - Documented package archives cleaning.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Mon, 25 Apr 2011 12:15:20 +0300

cupt (2.0.0) unstable; urgency=low

  * Upload to unstable.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sat, 16 Apr 2011 12:48:44 +0300

cupt (2.0.0~rc2) experimental; urgency=medium

  * lib:
    - Make sure that std::min() receives arguments of the same type.
      Fixes FTBFS on some architectures. (Closes: #622061)
    - download/uri:
      - 'getHost': fixed to not include a port to the answer. Thanks to
        Julian Andres Klode for the report. The regression was introduced
        in 2.0.0~alpha1. (Closes: #621853)
      - 'getHost': fixed to not include credentials to the answer.
        The regression was introduced in 2.0.0~alpha1.
    - system/resolvers/native: